test-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: test-node-app
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-react-app
                port:
                  number: 80
